# shot-command

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  run_4player.sh  run_editor.sh  run_game.sh
.cargo/: config.toml
.github/workflows/: release.yml
assets/maps/: my_map.ron
docs/: CLAUDE.md
docs/plans/: 2026-03-14-feature-brainstorm-v2.md  2026-03-14-feature-brainstorm-v3.md  2026-03-14-feature-brainstorm.md  2026-03-14-mvp-design.md  2026-03-14-phase1-core-simulation-design.md  2026-03-14-phase1-implementation.md  2026-03-15-phase2-multiplayer-design.md  2026-03-15-phase2-multiplayer-plan.md  2026-03-15-phase3a-weapons-design.md  2026-03-15-phase3a-weapons-plan.md  2026-03-15-phase3b-missiles-pd-design.md  2026-03-15-phase3b-missiles-pd-plan.md  2026-03-16-phase3c-fleet-composition-design.md  2026-03-16-qol-features-design.md  2026-03-17-ecs-refactor-design.md  2026-03-17-edgegap-deployment-plan.md  2026-03-17-fleet-status-sidebar-design.md  2026-03-17-formation-facing-design.md  2026-03-17-input-overhaul-design.md  2026-03-17-phase4a-radar-detection-design.md  2026-03-17-phase4a-radar-detection-plan.md  2026-03-17-phase4c-control-points-design.md  2026-03-17-phase5-damage-repair-design.md  2026-03-18-camera-controls-design.md  2026-03-18-phase6-maps-editor-design.md  2026-03-18-phase7-cloud-deployment-design.md  2026-03-18-phase7-implementation-plan.md  2026-03-21-multi-team-multiplayer-design.md
infra/: Pulumi.dev.yaml  Pulumi.yaml  firestore.indexes.json  firestore.rules  index.ts  package-lock.json  package.json  tsconfig.json
infra/functions/: package-lock.json  package.json
scripts/: package-lock.json  package.json  release.sh  sync-maps.js  sync-maps.ts
src/: CLAUDE.md  lib.rs  main.rs
src/camera/: CLAUDE.md  mod.rs
src/combat/: CLAUDE.md  mod.rs
src/control_point/: CLAUDE.md  mod.rs
src/fleet/: CLAUDE.md  lobby.rs  mod.rs
(+49 files in other folders)
